[hue] Added support for different color temperature capabilities and added Channel to set value in Kelvin (#9939)
* Added support for color temperature capabilities and set value in Kelvin
* Use system default channel type

Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>
Signed-off-by: Koen Schockaert <ks@qbus.be>