@@ -15,8 +15,6 @@ package org.openhab.binding.hue.internal.handler;
 import static org.openhab.binding.hue.internal.HueBindingConstants.*;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
@@ -31,6 +29,8 @@ import org.openhab.binding.hue.internal.Scene;
 import org.openhab.binding.hue.internal.State;
 import org.openhab.binding.hue.internal.State.ColorMode;
 import org.openhab.binding.hue.internal.StateUpdate;
+import org.openhab.binding.hue.internal.dto.ColorTemperature;
+import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.library.types.HSBType;
 import org.openhab.core.library.types.IncreaseDecreaseType;
 import org.openhab.core.library.types.OnOffType;
@@ -59,7 +59,7 @@ import org.slf4j.LoggerFactory;
  */
 @NonNullByDefault
 public class HueGroupHandler extends BaseThingHandler implements GroupStatusListener {
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_GROUP);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_GROUP);
 
     private final Logger logger = LoggerFactory.getLogger(HueGroupHandler.class);
     private final HueStateDescriptionOptionProvider stateDescriptionOptionProvider;
@@ -69,6 +69,7 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
     private @Nullable Integer lastSentColorTemp;
     private @Nullable Integer lastSentBrightness;
 
+    private ColorTemperature colorTemperatureCapabilties = new ColorTemperature();
     private long defaultFadeTime = 400;
 
     private @Nullable HueClient hueClient;
@@ -76,7 +77,7 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
     private @Nullable ScheduledFuture<?> scheduledFuture;
     private @Nullable FullGroup lastFullGroup;
 
-    private List<String> consoleScenesList = new ArrayList<>();
+    private List<String> consoleScenesList = List.of();
 
     public HueGroupHandler(Thing thing, HueStateDescriptionOptionProvider stateDescriptionOptionProvider) {
         super(thing);
@@ -201,7 +202,8 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
                 break;
             case CHANNEL_COLORTEMPERATURE:
                 if (command instanceof PercentType) {
-                    newState = LightStateConverter.toColorTemperatureLightState((PercentType) command);
+                    newState = LightStateConverter.toColorTemperatureLightStateFromPercentType((PercentType) command,
+                            colorTemperatureCapabilties);
                     newState.setTransitionTime(fadeTime);
                 } else if (command instanceof OnOffType) {
                     newState = LightStateConverter.toOnOffLightState((OnOffType) command);
@@ -210,6 +212,13 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
                     if (newState != null) {
                         newState.setTransitionTime(fadeTime);
                     }
+                }
+                break;
+            case CHANNEL_COLORTEMPERATURE_ABS:
+                if (command instanceof DecimalType) {
+                    newState = LightStateConverter.toColorTemperatureLightState((DecimalType) command,
+                            colorTemperatureCapabilties);
+                    newState.setTransitionTime(fadeTime);
                 }
                 break;
             case CHANNEL_BRIGHTNESS:
@@ -228,7 +237,7 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
                 if (newState != null && lastColorTemp != null) {
                     // make sure that the light also has the latest color temp
                     // this might not have been yet set in the light, if it was off
-                    newState.setColorTemperature(lastColorTemp);
+                    newState.setColorTemperature(lastColorTemp, colorTemperatureCapabilties);
                     newState.setTransitionTime(fadeTime);
                 }
                 break;
@@ -240,7 +249,7 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
                 if (newState != null && lastColorTemp != null) {
                     // make sure that the light also has the latest color temp
                     // this might not have been yet set in the light, if it was off
-                    newState.setColorTemperature(lastColorTemp);
+                    newState.setColorTemperature(lastColorTemp, colorTemperatureCapabilties);
                     newState.setTransitionTime(fadeTime);
                 }
                 break;
@@ -296,8 +305,9 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
         StateUpdate stateUpdate = null;
         Integer currentColorTemp = getCurrentColorTemp(group.getState());
         if (currentColorTemp != null) {
-            int newColorTemp = LightStateConverter.toAdjustedColorTemp(command, currentColorTemp);
-            stateUpdate = new StateUpdate().setColorTemperature(newColorTemp);
+            int newColorTemp = LightStateConverter.toAdjustedColorTemp(command, currentColorTemp,
+                    colorTemperatureCapabilties);
+            stateUpdate = new StateUpdate().setColorTemperature(newColorTemp, colorTemperatureCapabilties);
         }
         return stateUpdate;
     }
@@ -380,25 +390,27 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
 
         HSBType hsbType = LightStateConverter.toHSBType(state);
         if (!state.isOn()) {
-            hsbType = new HSBType(hsbType.getHue(), hsbType.getSaturation(), new PercentType(0));
+            hsbType = new HSBType(hsbType.getHue(), hsbType.getSaturation(), PercentType.ZERO);
         }
         updateState(CHANNEL_COLOR, hsbType);
 
         ColorMode colorMode = state.getColorMode();
         if (ColorMode.CT.equals(colorMode)) {
-            PercentType colorTempPercentType = LightStateConverter.toColorTemperaturePercentType(state);
-            updateState(CHANNEL_COLORTEMPERATURE, colorTempPercentType);
+            updateState(CHANNEL_COLORTEMPERATURE,
+                    LightStateConverter.toColorTemperaturePercentType(state, colorTemperatureCapabilties));
+            updateState(CHANNEL_COLORTEMPERATURE_ABS, LightStateConverter.toColorTemperature(state));
         } else {
-            updateState(CHANNEL_COLORTEMPERATURE, UnDefType.NULL);
+            updateState(CHANNEL_COLORTEMPERATURE, UnDefType.UNDEF);
+            updateState(CHANNEL_COLORTEMPERATURE_ABS, UnDefType.UNDEF);
         }
 
         PercentType brightnessPercentType = LightStateConverter.toBrightnessPercentType(state);
         if (!state.isOn()) {
-            brightnessPercentType = new PercentType(0);
+            brightnessPercentType = PercentType.ZERO;
         }
         updateState(CHANNEL_BRIGHTNESS, brightnessPercentType);
 
-        updateState(CHANNEL_SWITCH, state.isOn() ? OnOffType.ON : OnOffType.OFF);
+        updateState(CHANNEL_SWITCH, OnOffType.from(state.isOn()));
 
         return true;
     }
@@ -423,8 +435,8 @@ public class HueGroupHandler extends BaseThingHandler implements GroupStatusList
      */
     @Override
     public void onScenesUpdated(List<Scene> updatedScenes) {
-        List<StateOption> stateOptions = Collections.emptyList();
-        consoleScenesList = new ArrayList<>();
+        List<StateOption> stateOptions = List.of();
+        consoleScenesList = List.of();
         HueClient handler = getHueClient();
         if (handler != null) {
             FullGroup group = handler.getGroupById(groupId);
